@@ -1,3 +1,7 @@
+        * Fix our openid.signed list to be consistent with what we
+          actually sign when empty fields are present.
+          Reported and fixed by Igor Gariev <gariev@hotmail.com>.
+
         * Don't include op_endpoint in 1.1 assertion messages.
 
 1.01:
